--- a/stores/templates/stores/homepage.html
+++ b/stores/templates/stores/homepage.html
@@ -3,13 +3,41 @@
 
 {% block content %}
     <h1> My E-Commerce brok</h1>
+    <br>
+    <h3> Category: {{ gadget.category }} </h3>
+    <br><br>
 
-    {% for gadget in smartphone %}
-        <h3> Category: {{gadget.category}} </h3>
-        <h3> nama product: {{gadget.name}} </h3>
-        <h3> {{gadget.image}} </h3>
-        <h3> Harga: {{gadget.price}} </h3>
-        <h3> Deskripsi: {{gadget.description}} </h3>
-        <h3> Owner/seller: {{gadget.owner}} </h3>
-    {% endfor %}
+    <div class="container">
+        <div class="flex-container">
+            {% for gadget in smartphone %}
+                <div class="item">
+                    <img src="{{ gadget.image.url }}" style="width: 201px; height: 170px;">
+                    <h6> {{ gadget.name|truncatechars:45 }} </h6><br>
+                    <h5 style="color: rgba(0, 136, 226, 0.932);"> Rp.{{ gadget.formatted_price }} </h5>
+                    <h5> <img src="{{ gadget.owner.image.url }}" style="width: 30px; height: 30px;"> {{ gadget.owner.first_name }} {{ gadget.owner.last_name }} </h5>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <style>
+        .container {
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+        }
+
+        .flex-container {
+            display: flex;
+            flex-wrap: wrap;
+            width: 1950px;
+        }
+
+        .item {
+            width: calc(20% - 20px);
+            margin: 20px;
+            padding: 0px;
+            border: 1px solid #ccc;
+        }
+    </style>
 {% endblock %}
