--- a/stores/templates/stores/navbarStyle.html
+++ b/stores/templates/stores/navbarStyle.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'add_product' %}" style="color: white;">Add Product</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user_profile' %}" style="color: white;">My Profile</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
                         Dropdown
