--- a/stores/templates/stores/homepage.html
+++ b/stores/templates/stores/homepage.html
@@ -34,6 +34,9 @@
                             <h6> <a href="{% url 'product_show' gadget.id %}" style="text-decoration: none; color: black;"> {{ gadget.name|truncatechars:45 }} </a> </h6>
                         </div>
                         <h5 style="color: rgba(0, 136, 226, 0.932); padding-left: 14px;"> Rp.{{ gadget.formatted_price }} </h5>
+
+                        <br><br>
+                        <a href="{% url 'edit_product' gadget.id %}" class="btn btn-warning">Edit Product</a>
                         
                     </div>
                 {% endfor %}
