--- a/stores/templates/stores/user_profile.html
+++ b/stores/templates/stores/user_profile.html
@@ -2,48 +2,49 @@
 {% load static %}
 
 {% block content %}
-    {% if submitted %}
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                    <strong>{{ message }}</strong>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            {% endfor %}
-        {% endif %}
-    {% else %}
-        <div class="container">
-            <div class="card">
-                <h3> My Profile </h3>
-                <p>Manage your personal information to control and secure your account security</p>
-                <hr><br>
-                <form action="" class="form-control" method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
-
-                    <div class="profile-information" style="width: 640px;">
-                        <p style="margin-right: 10px; padding-bottom: 10px;"> First Name: </p> {{ profile_form.first_name }}
-                        <p style="margin-right: 10px; padding-bottom: 10px;"> Last Name: </p> {{ profile_form.last_name }}
-                        <p style="margin-right: 10px; padding-bottom: 10px;"> Email: </p> {{ profile_form.email }}
-                        <p style="margin-right: 10px; padding-bottom: 10px;"> Password: </p> {{ profile_form.password }}
-                        <p style="margin-right: 10px; padding-bottom: 10px;"> Phone Number: </p> {{ profile_form.phone_number }}
-                        <p style="margin-right: 10px; padding-bottom: 10px;"> Address: </p> {{ profile_form.address }}
-                        <p style="margin-right: 10px; padding-bottom: 10px;"> Gender: </p> {{ profile_form.gender }}
-                    </div>
-                    <div class="profile-pic" style="margin-left: 40px; margin-right: 10px;">
-                        <input type="file" accept="image/*" id="id_profile_image">
-                        {% if profile_form.instance.image %}
-                            <img src="{{ profile_form.instance.image.url }}" style="width: 100px; height: 100px; background-color: rgba(0, 0, 0, 0.7); border-radius: 50%;">
-                        {% else %}
-                            <img src="{% static 'images/no-profile-picture.jpg' %}" alt="logo" style="width: 100px; height: 100px; background-color: rgba(0, 0, 0, 0.7); border-radius: 50%;">
-                        {% endif %}
-                        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgb(0, 0, 0, 0.7); display: flex; flex-direction: column; justify-content: center; align-items: center; opacity: 0; transition: opacity 0.3s ease; border-radius: 50%;">
-                            <span style="color: solid white; cursor: pointer;">Change Picture</span>
-                        </div>
-                    </div>
-
-                </form>
-                
+    <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 610px; margin-left: 170px; margin-top: 20px;">
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1;">First Name:</label>
+            <div class="form" style="width: 430px">
+                {{ profile_form.first_name }}
             </div>
         </div>
-    {% endif %}
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_last_name" style="padding-bottom: 40px; flex-grow: 1;">Last Name:</label>
+            <div class="form" style="width: 430px">
+                {{ profile_form.last_name }}
+            </div>
+        </div>
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+            <label for="id_email" style="flex-grow: 1; padding-bottom: 40px">Email:</label>
+            <div class="form" style="width: 430px">
+                {{ profile_form.email }}
+            </div>
+        </div>
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+            <label for="id_password" style="flex-grow: 1; padding-bottom: 40px">Password:</label>
+            <div class="form" style="width: 430px">
+                {{ profile_form.password }}
+            </div>
+        </div>
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_phone_number" style="flex-grow: 1; padding-bottom: 40px">Phone Number:</label>
+            <div class="form" style="width: 430px">
+                {{ profile_form.phone_number }}
+            </div>
+        </div>
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+            <label for="id_address" style="flex-grow: 1;">Address:</label>
+            <div class="form" style="width: 80px; height: 290px; padding-bottom: 0px;"></div>
+                {{ profile_form.address }}
+            </div>
+        </div>
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+            <label for="id_gender" style="margin-right: 10px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
+            <div class="form" style="width: 430px;">
+                {{ profile_form.gender }}
+            </div>
+        </div>
+        <input type="submit" value="Submit" class="btn btn-success" style="margin-top: 40px; margin-left: 270px; margin-bottom: 40px;">
+    </form><br><br>
 {% endblock %}
