--- a/stores/templates/stores/add_customer_profile.html
+++ b/stores/templates/stores/add_customer_profile.html
@@ -3,6 +3,14 @@
 
 {% block content %}
     <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 610px; margin-left: 170px; margin-top: 20px;">
+        {% csrf_token %}
+
+        <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+            <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1;">Profile Picture:</label>
+            <div class="form" style="width: 430px">
+                {{ profile_form.image }}
+            </div>
+        </div>
         <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
             <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1;">First Name:</label>
             <div class="form" style="width: 430px">
