--- a/stores/templates/stores/navbarStyle.html
+++ b/stores/templates/stores/navbarStyle.html
@@ -16,7 +16,10 @@
                     <a class="nav-link" href="{% url 'add_product' %}" style="color: white;">Add Product</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'user_profile' %}" style="color: white;">My Profile</a>
+                    <a class="nav-link" href="{% url 'add_customer_profile' %}" style="color: white;">Add Customer Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'customerProfile' %}" style="color: white;">Profile</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
