fix: replace password field from class models customers & sellers with birthdate field.

--- a/stores/templates/stores/add_customer_profile.html
+++ b/stores/templates/stores/add_customer_profile.html
@@ -30,9 +30,9 @@
             </div>
         </div>
         <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-            <label for="id_password" style="flex-grow: 1; padding-bottom: 40px">Password:</label>
+            <label for="id_birthdate" style="flex-grow: 1; padding-bottom: 40px">Birthdate:</label>
             <div class="form" style="width: 430px">
-                {{ profile_form.password }}
+                {{ profile_form.birthdate }}
             </div>
         </div>
         <div class="profile-information" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
