--- a/stores/templates/stores/customerProfile.html
+++ b/stores/templates/stores/customerProfile.html
@@ -1,90 +1,94 @@
 {% extends 'basic.html' %}
 
 {% block content %}
-    <div class="container">
-        <div class="card">
-            <div class="title-profile" style="margin-left: 30px; margin-top: 10px;">
-                <h3>Profile</h3>
-                <p>Manage your profile to secure the secirity of your account</p>
-            </div><hr>
-            <form action="" method="POST" enctype="multipart/form-data" style="width: 690px; height: 920px; margin-left: 30px; margin-top: 5px;">
-                {% csrf_token %}
+    <div class="whole-body">
+        <div class="container">
+            <div class="card">
+                <div class="title-profile" style="margin-left: 30px; margin-top: 10px;">
+                    <h3>Profile</h3>
+                    <p>Manage your profile to secure the secirity of your account</p>
+                </div><hr>
+                <form action="" method="POST" enctype="multipart/form-data" style="width: 690px; height: 920px; margin-left: 30px; margin-top: 5px;">
+                    {% csrf_token %}
 
-                <div class="profile-id" style="display: flex; align-items: flex-start;">                    
-                    <div class="info-details">
-                        <div class="profile-information1" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                            <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1; width: 140px;">First Name:</label>
-                            <div class="form1" style="width: 380px; margin-left: 20px;">
-                                {{ form.first_name }}
-                            </div>
-                        </div>
-                        <div class="profile-information2" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
-                            <label for="id_last_name" style="padding-bottom: 40px; flex-grow: 1; width: 140px;">Last Name:</label>
-                            <div class="form2" style="width: 380px; margin-left: 20px;">
-                                {{ form.last_name }}
-                            </div>
-                        </div>
-                        <div class="profile-information3" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                            <label for="id_email" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Email:</label>
-                            <div class="form3" style="width: 380px; margin-left: 20px;">
-                                {{ form.email }}
-                            </div>
-                        </div>
-                        <div class="profile-information4" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                            <label for="id_password" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Password:</label>
-                            <div class="form4" style="width: 380px; margin-left: 20px;">
-                                {{ form.password }}
-                            </div>
-                        </div>
-                        <div class="profile-information5" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                            <label for="id_phone_number" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Phone Number:</label>
-                            <div class="form5" style="width: 380px; margin-left: 20px;">
-                                {{ form.phone_number }}
-                            </div>
-                        </div>
-                        <div class="profile-information6" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px; width: 380px;">
-                            <label for="id_gender" style="margin-right: 90px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
-                            <div class="form6" style="width: 430px; margin-left: 20px;">
-                                {{ form.gender }}
-                            </div>
-                        </div>
-                    </div><br>
-                    <div class="picture-profile-section" style="margin-left: 180px;">
-                        {% if form.instance.image %}
-                            <div class="profile-image-container">
-                                <img src="{{ form.instance.image.url }}" class="size-profile-picture">
-                                <div class="image-overlay">
-                                    <label for="file-upload" class="view-image">Change Picture</label>
-                                    <input type="file" id="file-upload" style="display: none;" accept="image/*">
-                                    <!-- <span class="view-image">Change Picture</span> -->
+                    <div class="profile-id" style="display: flex; align-items: flex-start; width: 1050px;">                    
+                        <div class="info-details" style="width: 1150px;">
+                            <div class="profile-information1" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
+                                <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1; width: 140px;">First Name:</label>
+                                <div class="form1" style="width: 380px; margin-left: 20px;">
+                                    {{ form.first_name }}
                                 </div>
                             </div>
-                        {% endif %}
-
-                        <br><br>
-                        {{ form.image }}
-                    </div>
-                </div><br>
-                <div>
-                    <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
-                        <label for="id_address" style="flex-grow: 1;">Address:</label>
-                        <div class="form7" style="width: 120px; padding-bottom: 0px;"></div>
-                            {{ form.address }}
+                            <div class="profile-information2" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">        
+                                <label for="id_last_name" style="padding-bottom: 40px; flex-grow: 1; width: 140px;">Last Name:</label>
+                                <div class="form2" style="width: 380px; margin-left: 20px;">
+                                    {{ form.last_name }}
+                                </div>
+                            </div>
+                            <div class="profile-information3" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
+                                <label for="id_email" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Email:</label>
+                                <div class="form3" style="width: 380px; margin-left: 20px;">
+                                    {{ form.email }}
+                                </div>
+                            </div>
+                            <div class="profile-information4" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
+                                <label for="id_birthdate" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Birthdate:</label>
+                                <div class="form4" style="width: 380px; margin-left: 20px;">
+                                    {{ form.birthdate }}
+                                </div>
+                            </div>
+                            <div class="profile-information5" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
+                                <label for="id_phone_number" style="flex-grow: 1; padding-bottom: 40px; width: 140px;">Phone Number:</label>
+                                <div class="form5" style="width: 380px; margin-left: 20px;">
+                                    {{ form.phone_number }}
+                                </div>
+                            </div>
+                            <div class="profile-information6" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px; width: 380px;">
+                                <label for="id_gender" style="margin-right: 90px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
+                                <div class="form6" style="width: 430px; margin-left: 20px;">
+                                    {{ form.gender }}
+                                </div>
+                            </div>
                         </div><br>
-                        <div class="button-position" style="text-align: center;">
-                            <a href="{% url 'customerProfile' %}"><input type="submit" value="Edit" class="btn btn-success"></a>
+                        <div class="picture-profile-section" style="margin-left: 180px; width: 290px;">
+                            <h4 style="margin-top: 5px; margin-bottom: 20px; width: 290px; text-decoration: underline;">Change Profile Picture</h4>
+                            {% if form.instance.image %}
+                                <div class="profile-image-container">
+                                    <img src="{{ form.instance.image.url }}" class="size-profile-picture">
+                                    <div class="image-overlay">
+                                        <label for="file-upload" class="view-image">Change Picture</label>
+                                        <input type="file" id="file-upload" name="image" style="display: none;" accept="image/*">
+                                    </div>
+                                </div>
+                            {% endif %}<br><br><hr>
+                        </div>
+                    </div><br>
+                    <div>
+                        <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 10px; margin-right: 0px;">
+                            <label for="id_address" style="flex-grow: 1;">Address:</label>
+                            <div class="form7" style="width: 120px; padding-bottom: 0px;"></div>
+                                {{ form.address }}
+                            </div><br>
+                            <div class="button-position" style="text-align: center;">
+                                <a href="{% url 'customerProfile' %}"><input type="submit" value="Save" class="btn btn-success"></a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </form><br>
+                </form><br>
+            </div>
         </div>
-
     </div>
 
     <style>
+        .whole-body {
+            /* background-color: rgba(14, 12, 12, 0.959); */
+            margin-top: 0px;
+        }
+
         .profile-image-container {
             position: relative;
             display: inline-block;
+            margin-left: 40px;
         }
 
         .size-profile-picture {
@@ -117,21 +121,23 @@
             color: white;
             cursor: pointer;
         }
+        
+        .birthdate-select {
+            width: 110px;
+            height: 40px;
+            margin-right: 9px;
+        }
     </style>
 
     <script>
+        // Change profile picture
         document.addEventListener("DOMContentLoaded", function() {
-            // document.querySelector('.view-image').addEventListener('click', function() {
-            //     document.getElementById('file-upload').click()
-            // })
-
             document.getElementById('file-upload').addEventListener('change', function() {
                 let file = this.files[0]
                 if (file) {
                     let reader = new FileReader()
                     reader.onload = function(e) {
                         document.querySelector('.size-profile-picture').src = e.target.result
-                        this.value = null
                     }
                     reader.readAsDataURL(file)
                 }
