--- a/stores/templates/stores/product_list.html
+++ b/stores/templates/stores/product_list.html
@@ -2,37 +2,40 @@
 
 {% block content %}
     <body>
-        <div class="container">
-            <div class="card">
-                <div class="product-id">
-                    <div class="title-teks" style="width: 640px;">
-                        <h4> {{ list_product.name }} </h4>
-                        <div class="card-price">
-                            <h3 style="padding-top: 5px; margin-left: 26px;"> Rp.{{ list_product.formatted_price }} </h3>
-                        </div>
-                        <br><br>
-                    
-                        <div class="owner-shop" style="display: flex; align-items: flex-start;">
-                            <img src="{{ list_product.owner.image.url }}" style="width: 100px; height: 100px; border-radius: 50%;">
-                            <h5>{{ list_product.owner }}</h5>
-                        </div><br><br>
-
-                        <h4>Deskripsi Produk:</h4>
-                        <p>{{ list_product.description }}</p>
+        <div class="whole-body">
+            <div class="container">
+                <div class="card">
+                    <div class="product-id">
+                        <div class="title-teks" style="width: 640px;">
+                            <h4> {{ list_product.name }} </h4>
+                            <div class="card-price">
+                                <h3 style="padding-top: 5px; margin-left: 26px;"> Rp.{{ list_product.formatted_price }} </h3>
+                            </div>
+                            <br><br>
                         
-                    </div>
-                    <div class="product-pic" style="margin-left: 40px; margin-right: 10px;">
-                        <img src="{{ list_product.image.url }}" style="width: 480px; height: 450px;">
-                    </div>
+                            <div class="owner-shop" style="display: flex; align-items: flex-start;">
+                                <img src="{{ list_product.owner.image.url }}" style="width: 100px; height: 100px; border-radius: 50%;">
+                                <h5>{{ list_product.owner }}</h5>
+                            </div><br><br>
 
+                            <h4>Deskripsi Produk:</h4>
+                            <p>{{ list_product.description }}</p>
+                            
+                        </div>
+                        <div class="product-pic" style="margin-left: 40px; margin-right: 10px;">
+                            <img src="{{ list_product.image.url }}" style="width: 480px; height: 450px;">
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
 
 
         <style>
-            body {
+            .whole-body {
                 background-color: rgba(14, 12, 12, 0.959);
+                margin-top: 0px;
             }
 
             .container {
@@ -42,7 +45,6 @@
             .card {
                 height: 820px;
                 width: 1180px;
-                margin-top: 55px;
             }
 
             .card-price {
