--- a/stores/templates/stores/product_add.html
+++ b/stores/templates/stores/product_add.html
@@ -5,12 +5,108 @@
         <div class="title-add-product" style="text-align: center;">
             <h2> Add Product </h2>
         </div><br>
-        <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 780px; margin-left: 170px;">
+        <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 710px; margin-left: 170px; margin-top: 20px;">
             {% csrf_token %}
-
-            {{ product_add.as_p }}
+            <div class="product-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_product_name" style="padding-bottom: 40px; flex-grow: 1;">Product Name:</label>
+                <div class="form1" style="width: 430px">
+                    {{ product_add.name }}
+                </div>
+            </div>
+            <div class="product-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_product_image" style="padding-bottom: 40px; flex-grow: 1;">Picture:</label>
+                <div class="form2" style="width: 430px">
+                    {{ product_add.image }}
+                </div>
+            </div>
+            <div class="product-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_product_price" style="padding-bottom: 40px; flex-grow: 1;">Price:</label>
+                <div class="form3" style="width: 430px">
+                    {{ product_add.price }}
+                </div>
+            </div>
+            <div class="product-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_product_category" style="padding-bottom: 40px; flex-grow: 1;">Category:</label>
+                <div class="form4" style="width: 430px">
+                    {{ product_add.category }}
+                </div>
+            </div>
+            <div id="smartphoneForm" style="display: none;">
+                <div class="smartphone-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_memory" style="padding-bottom: 40px; flex-grow: 1;">Memory Capacity:</label>
+                    <div class="form5" style="width: 430px">
+                        {{ smartphone_add.memory_capacity }}
+                    </div>
+                </div>
+                <div class="smartphone-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_ram" style="padding-bottom: 40px; flex-grow: 1;">RAM Capacity:</label>
+                    <div class="form6" style="width: 430px">
+                        {{ smartphone_add.ram_capacity }}
+                    </div>
+                </div>
+                <div class="smartphone-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_warranty" style="padding-bottom: 40px; flex-grow: 1;">Warranty Period:</label>
+                    <div class="form7" style="width: 430px">
+                        {{ smartphone_add.warranty_period }}
+                    </div>
+                </div>
+                <div class="smartphone-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_stock" style="padding-bottom: 40px; flex-grow: 1;">Stock:</label>
+                    <div class="form8" style="width: 430px">
+                        {{ smartphone_add.stock }}
+                    </div>
+                </div>
+                <div class="smartphone-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_seller_Address" style="padding-bottom: 40px; flex-grow: 1;">Seller Address:</label>
+                    <div class="form9" style="width: 430px">
+                        {{ smartphone_add.seller_Address }}
+                    </div>
+                </div>
+                <div class="smartphone-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_product_category" style="padding-bottom: 40px; flex-grow: 1;">Condition:</label>
+                    <div class="form10" style="width: 430px">
+                        {{ smartphone_add.condition }}
+                    </div>
+                </div>
+                <div class="smartphone-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                    <label for="id_smartphone_brand" style="padding-bottom: 40px; flex-grow: 1;">Brand:</label>
+                    <div class="form10" style="width: 430px">
+                        {{ smartphone_add.brand }}
+                    </div>
+                </div>
+            </div>
+            <div class="product-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_product_description" style="padding-bottom: 40px; flex-grow: 1;">Description:</label>
+                <div class="form5" style="width: 430px">
+                    {{ product_add.description }}
+                </div>
+            </div><br>
+            <div class="profile-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_product_owner" style="padding-bottom: 40px; flex-grow: 1;">Owner:</label>
+                <div class="form6" style="width: 430px">
+                    {{ product_add.owner }}
+                </div>
+            </div>
             <a href="{% url 'homepage' %}" class="btn btn-danger" style="margin-left: 290px; margin-right: 5px;">Cancel</a>
             <input type="submit" value="Submit" class="btn btn-success">
         </form>
     </div>
+
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            let categoryField = document.querySelector('.form4 select')
+            let smartphoneField = document.getElementById('smartphoneForm')
+
+            categoryField.addEventListener('change', function() {
+                console.log(categoryField.value)
+                if (categoryField.value === '4') {
+                    console.log('ini smartphone')
+                    smartphoneField.style.display = 'block'
+                } else {
+                    smartphoneField.style.display = 'none'
+                }
+            })
+        })
+    </script>
 {% endblock %}
