fix: remove 'categories' class models, revise the field in products class models and. Feat: add some new field in Smartphones class models.

--- a/stores/templates/stores/homepage.html
+++ b/stores/templates/stores/homepage.html
@@ -22,7 +22,7 @@
             {% endfor %}
         {% endif %}
     {% else %}<br>
-        <h3> Category: {{ gadget.category }} </h3>
+        <h3> Category: </h3>
         <br><br>
 
         <div class="container">
