--- a/stores/templates/stores/product_list.html
+++ b/stores/templates/stores/product_list.html
@@ -29,7 +29,7 @@
                     <div class="card-sub-title">
                         <h3 style="padding-top: 5px; margin-left: 26px;">Product Spesifications:</h3>
                     </div>
-                    <h6>Category: {{ list_product.category.name }} </h6>
+                    <h6>Category: {{ list_product.name }} </h6>
                     <div class="card-sub-title">
                         <h3 style="padding-top: 5px; margin-left: 26px;">Product Description:</h3>
                     </div>
