feat: add new class models 'food', adding and form foodForms into a dynamic form.

--- a/stores/templates/stores/edit_product.html
+++ b/stores/templates/stores/edit_product.html
@@ -6,7 +6,86 @@
         <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 780px; margin-left: 170px;">
             {% csrf_token %}
 
-            {{ edit_form.as_p }}
+            <div class="smartphone-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_smartphone_name" style="padding-bottom: 40px; flex-grow: 1;">Smartphone Name:</label>
+                <div class="form2" style="width: 430px">
+                    {{ edit_form.name }}
+                </div>
+            </div>
+            <div class="smartphone-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_smartphone_image" style="padding-bottom: 40px; flex-grow: 1;">Product Picture:</label>
+                <div class="form3" style="width: 430px">
+                    {{ edit_form.image }}
+                </div>
+            </div>
+            <div class="smartphone-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_smartphone_price" style="padding-bottom: 40px; flex-grow: 1;">Price:</label>
+                <div class="form4" style="width: 430px">
+                    {{ edit_form.price }}
+                </div>
+            </div>
+            <div class="smartphone-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_memory" style="padding-bottom: 40px; flex-grow: 1;">Memory Capacity:</label>
+                <div class="form5" style="width: 430px">
+                    {{ edit_form.memory_capacity }}
+                </div>
+            </div>
+            <div class="smartphone-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_ram" style="padding-bottom: 40px; flex-grow: 1;">RAM Capacity:</label>
+                <div class="form6" style="width: 430px">
+                    {{ edit_form.ram_capacity }}
+                </div>
+            </div>
+            <div class="smartphone-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_warranty" style="padding-bottom: 40px; flex-grow: 1;">Warranty Period:</label>
+                <div class="form7" style="width: 430px">
+                    {{ edit_form.warranty_period }}
+                </div>
+            </div>
+            <div class="smartphone-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_stock" style="padding-bottom: 40px; flex-grow: 1;">Stock:</label>
+                <div class="form8" style="width: 430px">
+                    {{ edit_form.stock }}
+                </div>
+            </div>
+            <div class="smartphone-information8" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_seller_Address" style="padding-bottom: 40px; flex-grow: 1;">Seller Address:</label>
+                <div class="form9" style="width: 430px">
+                    {{ edit_form.seller_Address }}
+                </div>
+            </div>
+            <div class="smartphone-information9" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_condition" style="padding-bottom: 40px; flex-grow: 1;">Condition:</label>
+                <div class="form10" style="width: 430px">
+                    {{ edit_form.condition }}
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+            <div class="smartphone-information10" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_brand" style="padding-bottom: 40px; flex-grow: 1;">Brand:</label>
+                <div class="form11" style="width: 430px">
+                    {{ edit_form.brand }}
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
+            </div>
+            <div class="smartphone-information11" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_description" style="padding-bottom: 40px; flex-grow: 1;">Description:</label>
+                <div class="form12" style="width: 430px">
+                    {{ edit_form.description }}
+                </div>
+            </div><br>
+            <div class="smartphone-information12" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_owner" style="padding-bottom: 40px; flex-grow: 1;">Owner:</label>
+                <div class="form13" style="width: 430px">
+                    {{ edit_form.owner }}
+                </div>
+            </div>
+            <div class="smartphone-information13" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_smartphone_categories" style="padding-bottom: 40px; flex-grow: 1;">Category:</label>
+                <div class="form14" style="width: 430px">
+                    {{ edit_form.categories }}
+                </div>
+            </div>
             <a href="{% url 'homepage' %}" class="btn btn-warning" style="margin-left: 290px;">Cancel</a>
             <a href="{% url 'homepage' %}"> <input type="submit" value="Edit" class="btn btn-success"></a>
         </form>
